# esp32basic

./: .gitignore  Makefile.am  README  README.md  configure.ac  esp32.ld
.github/workflows/: ccpp.yml
examples/: Makefile.am
examples/0blink/: Makefile.am  README.md  ledblink.c
examples/0button/: Makefile.am  README.md  buttonisr.c
examples/0hello/: Makefile.am  README.md  hello.c
examples/0ledctrl/: Makefile.am  README.md  ledctrl.c
examples/1rmtblink/: Makefile.am  README.md  rmtblink.c
examples/1rmtdht/: Makefile.am  README.md  defines.h  rmtdht.c
examples/1rmtmorse/: Makefile.am  README.md  chargen.c  chargen.h  mphgen.c  mphgen.h  rmtmorse.c
examples/1rmtmusic/: Makefile.am  README.md  defines.h  music.c  music.h  rmtmusic.c
examples/1rmttm1637/: Makefile.am  README.md  rmttm1637.c
examples/1rmtws2812/: Makefile.am  README.md  bitgen.c  bitgen.h  defines.h  rmtws2812.c
examples/3prog1/: Makefile.am  README.md  defines.h  prog.c
ld/: Makefile.am  README.md  esp32.ld  esp32.rom.ld  esp32.rom.syscalls.ld  esp32peripheral.ld  flags.mk
modules/: Makefile.am  bh1750.c  bh1750.h  bme280.c  bme280.h  dht22.c  dht22.h  i2ciface.h  tm1637.c  tm1637.h  ws2812.c  ws2812.h
scripts/: elf2bin.mk  flash.sh  monitor.sh
src/: Makefile.am  dport.h  esp32types.h  esp_attr.h  gpio.h  i2c.c  i2c.h  iomux.h  lockmgr.c  lockmgr.h  main.c  main.h  pidctrl.h  print.h  rmt.c  rmt.h  romfunctions.h  rtc.h  timg.c  timg.h  typeaux.h  uart.h  xtutils.h
src/utils/: generators.c  generators.h  i2cutils.c  i2cutils.h  rmtutils.c  rmtutils.h  uartutils.c  uartutils.h
