dist_data_DATA= \
 flags.mk \
 esp32.ld \
 esp32.rom.newlib-funcs.ld \
 esp32peripheral.ld \
 esp32.rom.newlib-locale.ld \
 esp32.rom.api.ld \
 esp32.rom.newlib-nano.ld \
 esp32.rom.eco3.ld \
 esp32.rom.newlib-time.ld \
 esp32.rom.ld \
 esp32.rom.redefined.ld \
 esp32.rom.libgcc.ld \
 esp32.rom.spiflash.ld \
 esp32.rom.newlib-data.ld \
 esp32.rom.syscalls.ld
